- Changed font for Headings - Fixed Pager alignment issue

--- a/wp-content/themes/Falkor/sass/base/_variables.scss
+++ b/wp-content/themes/Falkor/sass/base/_variables.scss
@@ -6,7 +6,7 @@ $color-white:		#FFFFFF; // white
 $color-grey:		#D3D0CB; // grey
 
 // fonts
-$heading-font:		"Prompt", sans-serif;
+$heading-font:		"Overpass", sans-serif;
 $body-font:			"Roboto", sans-serif;
 
 // Sizes
