--- a/wp-content/themes/Falkor/sass/components/_footer.scss
+++ b/wp-content/themes/Falkor/sass/components/_footer.scss
@@ -2,7 +2,7 @@
 #footer {
     /* positioning */
     width: 50%;
-    margin: 6em auto 0 auto;
+    margin: 4em auto 0 auto;
     padding-bottom: 1em;
     
     /* typography */
