--- a/wp-content/themes/Falkor/sass/components/_index.scss
+++ b/wp-content/themes/Falkor/sass/components/_index.scss
@@ -6,23 +6,23 @@
 
 .pager {
     /* alignment */
-    margin: 4em auto 0 auto;
+    margin: 4em auto 2em auto;
     text-align: center;
 	
     /* size */
     height: 1em;
-    max-width: 11%;
-    min-width: 8em;
-}
+	width: $content-width;
 
-.pager ul {
-	/* typography */
-    list-style:none;
-}
+	ul {
+		/* typography */
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		margin: 0 auto 0 auto;
+		list-style:none;
+	}
 
-.pager li {
-	/* alignment */
-    float: left;
-	padding-left: 1em;
+	li {
+		margin: 0 .3em 0 .3em;
+	}
 }
- 
