--- a/wp-content/themes/Falkor/sass/components/_post.scss
+++ b/wp-content/themes/Falkor/sass/components/_post.scss
@@ -2,7 +2,7 @@
 .article-title, .linked-title, .crosspost-title {
 	/* typography */
 	font-family: $heading-font;
-	letter-spacing: .15em;
+	letter-spacing: .05em;
 	text-transform: uppercase;
 	
 	/* size and positioning */
